# wayime

./: Cargo.toml  README.md  flake.nix
crates/rime-api-rs/: Cargo.toml  README.md
crates/rime-api-rs/src/: api.rs  candidate.rs  commit.rs  composition.rs  config.rs  context.rs  lib.rs  menu.rs  schema_list.rs  session.rs  status.rs  traits.rs  util.rs
crates/wayime/: Cargo.toml
crates/wayime/src/: engine.rs  main.rs
crates/wlrime/: Cargo.toml
crates/wlrime/examples/: xkb_name.rs
crates/wlrime/src/: engine.rs  im.rs
crates/wlrime/src/im/: dispatch_input_method.rs  dispatch_input_method_keyboard_grab.rs  dispatch_virtual_keyboard.rs
src/: engine.rs  im.rs  main.rs
src/im/: dispatch_input_method.rs  dispatch_input_method_keyboard_grab.rs  dispatch_input_method_manager.rs  dispatch_registry.rs  dispatch_seat.rs  dispatch_virtual_keyboard_manager.rs
